--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vector",
+  "name": "xyzt",
   "version": "1.0.2",
   "author": "Pavol Hejný <me@pavolhejny.com> (https://pavolhejny.com)",
   "description": "A vector manipulation class",
