Scripts and updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "noUnusedLocals": true,    
     "strictNullChecks": true,
     "strictFunctionTypes": true,
-    "suppressImplicitAnyIndexErrors": true
+    "suppressImplicitAnyIndexErrors": true,
+    "esModuleInterop": true,
+    "downlevelIteration": true
   }
 }
