--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run develop",
-    "preversion": "npm test && npm run lint && npm run build && npm run prettier-commit && npm run documentation-commit",
+    "preversion": "npm test && npm run lint && npm run build && npm run prettier-commit && npm run generate-main-exports-commit && npm run documentation-commit",
     "postversion": "git push && git push --tags && npm publish && npm run update-in-other-repos",
     "build": "webpack --config webpack.production.config.js",
     "develop-build": "onchange \"src/**/*.{ts,tsx}\" --initial --kill --delay 500  -- webpack --config webpack.development.config.js",
@@ -28,27 +28,30 @@
     "test": "jest --config jestconfig.json",
     "test-watch": "jest --config jestconfig.json --watchAll",
     "lint": "tslint -p tsconfig.json",
+    "generate-main-exports": "ts-node ./scripts/generate-main-exports/generate-main-exports.ts",
+    "generate-main-exports-commit": "git diff --exit-code && npm run generate-main-exports && npm run prettier && git add src && git commit --allow-empty -m \"Updating exports\"",
     "update-in-other-repos": "npm run update-in-touchcontroller && npm run update-in-collboard",
     "update-in-touchcontroller": "cd ../../HeduApp/collboard && git stash && npm i xyzt@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt\" && git push && git stash pop",
     "update-in-collboard": "cd ../../HeduApp/collboard && git stash && npm i xyzt@latest && npm i touchcontroller@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt and touchcontroller\" && git push && git stash pop"
-
   },
   "dependencies": {},
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/uuid": "^3.4.5",
-    "codecov": "^3.5.0",
+    "codecov": "^3.8.1",
+    "express": "^4.16.3",
+    "glob-promise": "^3.4.0",
     "jest": "^24.8.0",
     "onchange": "^5.2.0",
     "prettier": "^1.18.2",
-    "ts-jest": "^24.0.2",
+    "ts-jest": "^26.4.3",
     "ts-loader": "^4.5.0",
+    "ts-node": "^9.0.0",
     "tslint": "^5.17.0",
     "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.14.2",
-    "webpack": "^4.39.1",
-    "webpack-cli": "^3.3.6",
-    "express": "^4.16.3",
-    "typescript": "^2.9.2"
+    "typedoc": "^0.19.2",
+    "typescript": "^4.0.5",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
