--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "lint": "tslint -p tsconfig.json",
     "generate-main-exports": "ts-node ./scripts/generate-main-exports/generate-main-exports.ts",
     "generate-main-exports-commit": "git diff --exit-code && npm run generate-main-exports && npm run prettier && git add src && git commit --allow-empty -m \"Updating exports\"",
-    "update-in-other-repos": "npm run update-in-touchcontroller && npm run update-in-collboard",
-    "update-in-touchcontroller": "cd ../../hejny/touchcontroller && git stash && npm i xyzt@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt\" && git push && git stash pop",
-    "update-in-collboard": "cd ../../collboard/collboard-main && git stash && npm i xyzt@latest && npm i touchcontroller@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt and touchcontroller\" && git push && git stash pop"
+    "update-in-other-repos": "",
+    "--update-in-other-repos": "npm run update-in-touchcontroller && npm run update-in-collboard",
+    "--update-in-touchcontroller": "cd ../../hejny/touchcontroller && git stash && npm i xyzt@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt\" && git push && git stash pop",
+    "--update-in-collboard": "cd ../../collboard/collboard-main && git stash && npm i xyzt@latest && npm i touchcontroller@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt and touchcontroller\" && git push && git stash pop"
   },
   "dependencies": {},
   "devDependencies": {
