Pretty imports workflow

--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "postversion": "git push && git push --tags && npm publish && npm run update-in-other-repos",
     "build": "webpack --config webpack.production.config.js",
     "develop-build": "onchange \"src/**/*.{ts,tsx}\" --initial --kill --delay 500  -- webpack --config webpack.development.config.js",
+    "pretty-imports": "npx organize-imports-cli tsconfig.json",
     "prettier": "prettier --config .prettierrc --write \"{src,test,samples}/**/*.{ts,json,js,html,css}\"",
     "prettier-watch": "onchange \"{src,test,samples}/**/*.{ts,json,js,html,css}\" -- prettier --config .prettierrc --write {{changed}}",
-    "prettier-commit": "git diff --exit-code && npm run prettier && git add src && git commit --allow-empty -m \"Prettier\"",
+    "prettier-commit": "git diff --exit-code && npm run pretty-imports && npm run prettier && git add src && git commit --allow-empty -m \"Prettier\"",
     "documentation": "typedoc --excludePrivate --hideGenerator --mode file --theme minimal --out docs --name \"Vector\" ./src",
     "documentation-commit": "git diff --exit-code && npm run documentation && git add docs && git commit --allow-empty -m \"Vector\"",
     "test": "jest --config jestconfig.json",
@@ -44,6 +45,7 @@
     "glob-promise": "^3.4.0",
     "jest": "^26.6.3",
     "onchange": "^7.1.0",
+    "organize-imports-cli": "^0.8.0",
     "prettier": "^2.1.2",
     "ts-jest": "^26.4.3",
     "ts-loader": "^8.0.9",
