--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.17.1",
     "glob-promise": "^3.4.0",
     "jest": "^26.6.3",
+    "jest-matcher-deep-close-to": "^2.0.1",
     "onchange": "^7.1.0",
     "organize-imports-cli": "^0.8.0",
     "prettier": "^2.1.2",
