--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "documentation-commit": "git diff --exit-code && npm run documentation && git add docs && git commit --allow-empty -m \"Vector\"",
     "test": "jest --config jestconfig.json",
     "test-watch": "jest --config jestconfig.json --watchAll",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "echo \"TODO: Update linter to working ESlint.\"",
+    "--lint": "tslint -p tsconfig.json",
     "generate-main-exports": "ts-node ./scripts/generate-main-exports/generate-main-exports.ts",
     "generate-main-exports-commit": "git diff --exit-code && npm run generate-main-exports && npm run prettier && git add src && git commit --allow-empty -m \"Updating exports\"",
     "update-in-other-repos": "",
