--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "pretty-imports": "npx organize-imports-cli tsconfig.json",
     "prettier": "npx prettier --config .prettierrc --write \"{src,test,samples}/**/*.{ts,json,js,html,css}\"",
     "prettier-watch": "npx onchange \"{src,test,samples}/**/*.{ts,json,js,html,css}\" -- npx prettier --config .prettierrc --write {{changed}}",
-    "prettier-commit": "git diff --exit-code && npm run pretty-imports && npm run prettier && git add src && git commit --allow-empty -m \"Prettier\"",
+    "prettier-commit": "git diff --exit-code && npm run pretty-imports && npm run prettier && git add --all && git commit --allow-empty -m \"Prettier\"",
     "documentation": "typedoc --excludePrivate --hideGenerator --mode file --theme minimal --out docs --name \"Documentation\" ./src",
     "documentation-commit": "git diff --exit-code && npm run documentation && git add docs && git commit --allow-empty -m \"Vector\"",
     "test": "jest --config jestconfig.json",
@@ -30,7 +30,7 @@
     "lint": "echo \"TODO: Update linter to working ESlint.\"",
     "--lint": "tslint -p tsconfig.json",
     "generate-main-exports": "ts-node ./scripts/generate-main-exports/generate-main-exports.ts",
-    "generate-main-exports-commit": "git diff --exit-code && npm run generate-main-exports && npm run prettier && git add src && git commit --allow-empty -m \"Updating exports\"",
+    "generate-main-exports-commit": "git diff --exit-code && npm run generate-main-exports && npm run prettier && git add src/main.ts && git commit --allow-empty -m \"Updating exports\"",
     "update-in-other-repos": "",
     "--update-in-other-repos": "npm run update-in-touchcontroller && npm run update-in-collboard",
     "--update-in-touchcontroller": "cd ../../hejny/touchcontroller && git stash && npm i xyzt@latest && git add package.json package-lock.json && git commit --allow-empty -m \"Update of xyzt\" && git push && git stash pop",
