--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+git@github.com:hejny/vector.git"
+    "url": "https://github.com/hejny/xyzt"
   },
   "keywords": [],
   "license": "MIT",
