--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
+    "files.eol": "\n",
     "jest.pathToConfig": "jestconfig.json",
     "jestrunner.jestCommand": "npm run test --",
     "eslint.options": { "configFile": ".eslintrc.js" },
