--- a/package.json
+++ b/package.json
@@ -40,24 +40,24 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@types/jest": "^26.0.15",
-    "@types/uuid": "^8.3.0",
-    "codecov": "^3.8.1",
-    "express": "^4.17.1",
-    "glob-promise": "^3.4.0",
-    "jest": "^26.6.3",
-    "jest-matcher-deep-close-to": "^2.0.1",
-    "onchange": "^7.1.0",
-    "organize-imports-cli": "^0.8.0",
-    "prettier": "^2.2.0",
-    "ts-jest": "^26.4.4",
-    "ts-loader": "^8.0.11",
-    "ts-node": "^9.0.0",
-    "tslint": "^5.20.1",
-    "tslint-config-prettier": "^1.18.0",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.1.2",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0"
+    "@types/jest": "26.0.15",
+    "@types/uuid": "8.3.0",
+    "codecov": "3.8.1",
+    "express": "4.17.1",
+    "glob-promise": "3.4.0",
+    "jest": "26.6.3",
+    "jest-matcher-deep-close-to": "2.0.1",
+    "onchange": "7.1.0",
+    "organize-imports-cli": "0.8.0",
+    "prettier": "2.2.0",
+    "ts-jest": "26.4.4",
+    "ts-loader": "8.0.11",
+    "ts-node": "9.0.0",
+    "tslint": "5.20.1",
+    "tslint-config-prettier": "1.18.0",
+    "typedoc": "0.22.11",
+    "typescript": "4.1.2",
+    "webpack": "5.6.0",
+    "webpack-cli": "4.2.0"
   }
 }
