--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xyzt",
   "version": "4.6.0",
   "author": "Pavol Hejný <me@pavolhejny.com> (https://pavolhejny.com)",
-  "description": "A vector manipulation class",
+  "description": "A vector simple vector manipulation class.",
   "main": "./dist/main.js",
   "types": "./dist/typings/src/main.d.ts",
   "files": [
