--- a/scripts/generate-main-exports/tsconfig.json
+++ b/scripts/generate-main-exports/tsconfig.json
@@ -14,8 +14,7 @@
         "experimentalDecorators": true,
         "noUnusedLocals": false,
         "resolveJsonModule": true,
-        "esModuleInterop": true,
-        "jsx": "react"
+        "esModuleInterop": true
     },
     "exclude": ["node_modules"]
 }
