--- a/package.json
+++ b/package.json
@@ -37,12 +37,9 @@
         "update-packages": "npm-check-updates -u && git add ./package.json && git commit -m \"Update packages\" && npm run force-reinstall",
         "force-reinstall": "rm ./package-lock.json && rm -rf ./node_modules && npm install && git add ./package-lock.json && git commit -m \"Force reinstall\""
     },
-    "dependencies": {
-        "tslib": "^2.3.1"
-    },
+    "dependencies": {},
     "devDependencies": {
         "@rollup/plugin-typescript": "8.3.0",
-        "rollup": "2.58.1",
         "@types/jest": "^26.0.15",
         "@types/uuid": "^8.3.0",
         "codecov": "^3.8.1",
@@ -53,12 +50,14 @@
         "onchange": "^7.1.0",
         "organize-imports-cli": "^0.8.0",
         "prettier": "^2.2.0",
+        "rollup": "2.58.1",
         "ts-jest": "^26.4.4",
         "ts-loader": "^8.0.11",
         "ts-node": "^10.5.0",
+        "tslib": "^2.3.1",
         "tslint": "^5.20.1",
         "tslint-config-prettier": "^1.18.0",
-        "typedoc": "^0.19.2",
+        "typedoc": "^0.22.12",
         "typescript": "^4.1.2"
     }
 }
