--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "xyzt",
     "version": "5.0.0",
     "author": "Pavol Hejný <me@pavolhejny.com> (https://pavolhejny.com)",
-    "description": "A vector manipulation class",
+    "description": "The vector manipulation class",
     "sideEffects": false,
     "module": "./dist/esm/xyzt.js",
     "main": "./dist/umd/xyzt.js",
@@ -22,7 +22,7 @@
         "prettier": "npx prettier --config .prettierrc --write \"{src,test,samples}/**/*.{ts,json,js,html,css}\"",
         "prettier-watch": "npx onchange \"{src,test,samples}/**/*.{ts,json,js,html,css}\" -- npx prettier --config .prettierrc --write {{changed}}",
         "prettier-commit": "git diff --exit-code && npm run pretty-imports && npm run prettier && git add --all && git commit --allow-empty -m \"Prettier\"",
-        "documentation": "typedoc --excludePrivate --hideGenerator --theme minimal --out docs --name \"Documentation\" ./src",
+        "documentation": "typedoc",
         "documentation-commit": "git diff --exit-code && npm run documentation && git add docs && git commit --allow-empty -m \"Vector\"",
         "test": "jest --config jestconfig.json",
         "test-watch": "jest --config jestconfig.json --watchAll",
