✍🏻 Description of the project into package.json
🔼 This commit was automatically generated by [Batch project editor](https://github.com/hejny/batch-project-editor)

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "xyzt",
   "version": "5.1.0",
   "author": "Pavol Hejný <me@pavolhejny.com> (https://pavolhejny.com)",
-  "description": "The vector manipulation class",
+  "description": "The vector simple vector manipulation class.",
   "sideEffects": false,
   "module": "./dist/esm/xyzt.js",
   "main": "./dist/umd/xyzt.js",
