--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "xyzt",
     "version": "5.4.0",
     "author": "Pavol Hejný <me@pavolhejny.com> (https://pavolhejny.com)",
-    "description": "The vector simple vector manipulation class.",
+    "description": "",
     "sideEffects": false,
     "module": "./dist/esm/xyzt.js",
     "main": "./dist/umd/xyzt.js",
